--- a/package.json
+++ b/package.json
@@ -46,5 +46,7 @@
   "config": {
     "domain": "wp-project-dev.local"
   },
-  "dependencies": {}
+  "dependencies": {
+    "bootstrap": "^4.2.1"
+  }
 }
